fix/change windowrules to the new syntax in hyprland.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -91,12 +91,12 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 # env = QT_QPA_PLATFORMTHEME,qt5ct  <-- (Commented out: duplicate)
-env = QT_QPA_PLATFORMTHEME,qt6ct
+# env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_STYLE_OVERRIDE,kvantum
 
 # unscale xwayland
 # xwayland {
@@ -363,32 +363,53 @@ bindel = $main,LEFT,exec,hyprctl hyprsunset identity
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-
-# Example windowrule v2
-
-
 # Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+windowrule {
+    # Ignore maximize requests from all apps. You'll probably like this.
+    name = suppress-maximize-events
+    match:class = .*
+
+    suppress_event = maximize
+}
+
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
+
+# Hyprland-run windowrule
+windowrule {
+    name = move-hyprland-run
+
+    match:class = hyprland-run
+
+    move = 20 monitor_h-120
+    float = yes
+}
+
 
 # Gaming (Workspace 5): Lutris & Steam
-# (?i) makes it case-insensitive so it catches "Steam" and "steam"
-# Workspace 1: FreeTube (Catches "FreeTube", "freetube")
-windowrulev2 = workspace 1, class:^(?i)(freetube)$
+# Workspace 1: FreeTube
+windowrule = workspace 1, match:class ^(?i)(freetube)$
 
-# Workspace 2: Lutris (Catches "Lutris", "lutris")
-windowrulev2 = workspace 2, class:^(?i)(lutris)$
+# Workspace 2: Lutris
+windowrule = workspace 2, match:class ^(?i)(lutris)$
 
-# Workspace 3: Zen Browser (Catches "zen", "zen-alpha", "zen-browser")
-windowrulev2 = workspace 3, class:^(?i)(zen.*)$
+# Workspace 3: Zen Browser
+windowrule = workspace 3, match:class ^(?i)(zen.*)$
 
-# Picture-in-Picture (Firefox/Chrome): Float, Pin, and No Border
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = pin, title:^(Picture-in-Picture)$
-windowrulev2 = noborder, title:^(Picture-in-Picture)$
+# Picture-in-Picture (Firefox/Chrome)
+# Note: 'noborder' is replaced by 'border_size 0' in the new syntax
+windowrule = float on, match:title ^(Picture-in-Picture)$
+windowrule = pin on, match:title ^(Picture-in-Picture)$
+windowrule = border_size 0, match:title ^(Picture-in-Picture)$
