small edits of the configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ monitor=,1920x1080@60 , 0x0, 1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
+$fileManager = dolphin
 $menu = rofi -show drun
 
 #################
@@ -59,7 +59,7 @@ exec-once = wl-paste --watch cliphist store -d
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 # exec-once = hyprpaper 
 exec-once = fcitx5 -d
-# exec-once = hyprctl setcursor Bibata-Modern-Ice 24  <-- (Commented to avoid conflict with Env Var below)
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24  #<-- (Commented to avoid conflict with Env Var below)
 #exec-once = festivalr--server &
 # exec-once = waypaper --restore
 exec-once = hyprsunset
@@ -67,11 +67,8 @@ exec-once = hypridle
 exec-once = swaync
 # exec-once = /home/wiler2/scripts/BGEE-BG2EE-MountCipofs.sh
 
-# Force Rofi data into RAM at startup (HDD Speed Hack)
-exec-once = rofi -show drun -no-show-icons & sleep 1 && killall rofi
-
 # Force GTK Theme
-exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Kanagawa-B-LB-Dark-Dragon"
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Kanagawa-Dark"
 exec-once = gsettings set org.gnome.desktop.interface icon-theme "Papirus"
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Classic"
 exec-once = gsettings set org.gnome.desktop.interface font-name "JetBrainsMono Nerd Font Medium 11"
@@ -83,8 +80,8 @@ exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-#env = XCURSOR_THEME,Bibata-Modern-Classic
-#env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic  
 env = HYPRCURSOR_SIZE,24                  # Replace 24 with your desired size
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -95,8 +92,13 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 # env = QT_QPA_PLATFORMTHEME,qt5ct  <-- (Commented out: duplicate)
-# env = QT_QPA_PLATFORMTHEME,qt6ct
-env = QT_STYLE_OVERRIDE,kvantum
+env = QT_QPA_PLATFORMTHEME,qt6ct
+# env = QT_STYLE_OVERRIDE,kvantum
+
+env = GTK_IM_MODULE, fcitx
+env = QT_IM_MODULE, fcitx
+env = XMODIFIERS, @im=fcitx
+
 
 # unscale xwayland
 # xwayland {
@@ -263,6 +265,13 @@ bind = $main, B, exec, zen-browser
 bind = $main, R, exec, hyprshot -m region
 bind = $main, W, exec, hyprshot -m window 
 
+# OCR with Hyprshot (Reliable Temp File Method)
+# bind = $main SHIFT, T, exec, hyprshot -m region -o /tmp -f ocr_snap.png --freeze --silent && tesseract /tmp/ocr_snap.png - | wl-copy && rm /tmp/ocr_snap.png
+
+
+bind = $main SHIFT, R, exec, ~/scripts/tesseract-hyprshot-ocr.sh
+
+
 # --- CONFLICT FIX: LOCK SCREEN ---
 # Lock Screen (Super + L) -> COMMENTED OUT (Conflicts with Vim Move Right)
 # bind = $main, L, exec, hyprlock
@@ -413,3 +422,8 @@ windowrule = workspace 3, match:class ^(?i)(zen.*)$
 windowrule = float on, match:title ^(Picture-in-Picture)$
 windowrule = pin on, match:title ^(Picture-in-Picture)$
 windowrule = border_size 0, match:title ^(Picture-in-Picture)$
+
+windowrule = match:class ^(okular)$, match:title ^(Open Document)$, float on, center on, size 900 600
+
+windowrule = match:class ^(org.kde.ark)$, float on, center on, size 900 600
+
