added (kanata) a custom keyboard remapper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -257,13 +257,16 @@ bind = $main, M, exit,
 bind = $main, E, exec, $fileManager
 bind = $main, T, togglefloating,
 bind = $main, space, exec, $menu
-bind = $main, V, exec, cliphist list | rofi -dmenu -p "📋 Clipboard" | cliphist decode | wl-copy
+bind = $main, V, exec, cliphist list | rofi -dmenu -i -matching fuzzy -p  "📋 Clipboard" | cliphist decode | wl-copy
 bind = $main, P, pseudo, # dwindle
 # bind = $main, J, togglesplit, # dwindle
 bind = $main, F, fullscreen,
 bind = $main, B, exec, zen-browser 
 bind = $main, R, exec, hyprshot -m region
+bind = $main ALT, R, exec, hyprshot -m region --clipboard-only
 bind = $main, W, exec, hyprshot -m window 
+bind = $main SHIFT, W, exec, hyprshot -m window --clipboard-only
+bind = , PRINT, exec, hyprshot -m output
 
 # OCR with Hyprshot (Reliable Temp File Method)
 # bind = $main SHIFT, T, exec, hyprshot -m region -o /tmp -f ocr_snap.png --freeze --silent && tesseract /tmp/ocr_snap.png - | wl-copy && rm /tmp/ocr_snap.png
