added a new layout to kanata.kbd (vim-motion), made (space + tab) = Esc

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -98,7 +98,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 env = GTK_IM_MODULE, fcitx
 env = QT_IM_MODULE, fcitx
 env = XMODIFIERS, @im=fcitx
-
+env = XDG_MENU_PREFIX,arch-
 
 # unscale xwayland
 # xwayland {
