--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,7 +57,7 @@ exec-once = waybar
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --watch cliphist store -d
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-# exec-once = hyprpaper 
+exec-once = hyprpaper 
 exec-once = fcitx5 -d
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24  #<-- (Commented to avoid conflict with Env Var below)
 #exec-once = festivalr--server &
@@ -358,8 +358,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 1%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 1%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -415,7 +415,7 @@ windowrule {
 windowrule = workspace 1, match:class ^(?i)(freetube)$
 
 # Workspace 2: Lutris
-windowrule = workspace 2, match:class ^(?i)(lutris)$
+windowrule = workspace 2, match:class ^(?i)(net.lutris.Lutris)$
 
 # Workspace 3: Zen Browser
 windowrule = workspace 3, match:class ^(?i)(zen.*)$
@@ -430,3 +430,4 @@ windowrule = match:class ^(okular)$, match:title ^(Open Document)$, float on, ce
 
 windowrule = match:class ^(org.kde.ark)$, float on, center on, size 900 600
 
+windowrule = match:class ^(kitty)$, match:title ^(kitty)$, opacity 0.8 0.5
