--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -84,3 +84,10 @@ map alt+w close_tab
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
 map alt+3 goto_tab 3
+
+
+editor nvim
+
+# Show keybindings in a popup overlay
+map f1 launch --type=overlay --title="Kitty Help" sh -c "rg '^map' ~/.config/kitty/kitty.conf | less | fzf"
+
